<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_hint">Enter a title for the dream.</string>
    <string name="dream_title_label">Title</string>
    <string name="dream_details_label">Details</string>
    <string name="dream_solved_label">Solved</string>
    <string name="dream_item_title">Dream Title</string>
    <string name="dream_item_date">Dream Date</string>



    <string name="dream_title_text" >Enter a dream.</string>
    <string name="dream_fulfilled_checkbox" >Fulfilled</string>
    <string name="dream_deferred_checkbox" >Deferred</string>
    <string name="dream_entries_label" >Entries</string>


    <string name="target">target</string>
    <string name="archer">archer</string>
    <string name="entry_text">Enter a reflection.</string>
    <string name="dream_share">&#62;&#62; %1$s &#60;&#60; \nThis dream was conceived on %2$s. \nDream reflections: \n%3$s\n%4$s</string>
    <string name="share_dream_fulfilled">This dream has been fulfilled.</string>
    <string name="share_dream_deferred">This dream has been deferred.</string>
    <string name="dream_share_subject">Dream Share</string>
    <string name="send_share">Share dream via</string>

</resources>

